reply too long bug
Type: BF
Jira: HALO-1033

--- a/client/applications/ticket/components/detail/style/index.less
+++ b/client/applications/ticket/components/detail/style/index.less
@@ -100,6 +100,7 @@
         .reply-content {
           float: right;
           background-color: @color_info_100;
+          word-wrap: break-word;
         }
         .reply-update {
           float: left;
